--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -70,7 +70,7 @@
         <div class="welcome">Welcome, {{ name }}!</div>
 
         <div class="grid">
-            <a href="#" class="module">Project Management</a>
+            <a href="{{ url_for('project_management') }}">Project Management</a>
             <a href="#" class="module">Production</a>
             <a href="#" class="module">Vendor Management</a>
             <a href="#" class="module">Summary Reports</a>
