--- a/templates/project.html
+++ b/templates/project.html
@@ -74,6 +74,10 @@
         </div>
 
         <div class="modal-body">
+            <!-- Enquiry ID -->
+            <label>Enquiry ID</label>
+            <input type="text" name="enquiry_id" class="form-control readonly-input" value="Auto Generated" readonly>
+
             <!-- Quotation -->
             <label>Quotation</label>
             <input type="text" name="quotation" class="form-control" required>
